--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,8 @@ http {
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
     include /etc/nginx/conf.d/*.conf;
-
+    gzip on;
+    gzip_types application/json;
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
